change msj error

--- a/site_ViveBio/src/views/products/add.ejs
+++ b/site_ViveBio/src/views/products/add.ejs
@@ -96,7 +96,7 @@
 											</option>
 											<% }) %>
 									</select>
-									<p id="add_error-blur" class="errorProperty"></p>
+									<p id="add_error-blur" class="errorBlur"></p>
 								</div>
 								<div class="add_form-box-description">
 									<label for="desciption">Descripción</label>
