--- a/site_ViveBio/public/css/card.css
+++ b/site_ViveBio/public/css/card.css
@@ -15,6 +15,7 @@
     border-radius: 20px;
     text-align: center;
     font-size: large;
+    background: linear-gradient(0deg, rgb(65, 123, 96) 0%, rgba(16, 247, 207, 0.11) 88%)
 }
 
 /*NOMBRE PRODUCTO*/
@@ -50,6 +51,17 @@
     text-shadow: none;
     line-height: 25px;
     margin-top: 20px;
+    font-size: 15px;
+}
+
+.productCard ul {
+    padding: 5px;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+}
+
+.productCard .promocion{
     font-size: 15px;
 }
 
@@ -194,26 +206,34 @@
 .productCard .estilo-c .img-container img {
     width: 100%;
     position: absolute;
-    transition: all 0.5s;
+    transition: all 1.5s;
     height: 100%;
     object-fit: cover;
 }
 
 .productCard .estilo-c:hover .img-container img {
-    transform: scale(1.2);
+    transform: scale(1.4);
+    
 }
 
 .productCard .estilo-c .info-container {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    background-color: var(--green-background-cards);
-    /* height: 170px; */
-    padding: 10px;
+    background-color: #b3d9ce91;
     text-align: center;
-    /* display: flex; */
-    /* flex-wrap: nowrap; */
-    /* justify-content: space-evenly; */
-    color: var(--azulSuave);
+    color: var(--VioletaOscuro);
+    opacity: 0;
+    transition: all 0.8s;
+    z-index: 1000;
+    position: absolute;
+    top: 58%;
+    right: -85%;
+    width: 100%;
+}
+
+.productCard .estilo-c .img-container:hover .info-container {
+    opacity: 1;
+    right: 0px;
 }
 
 .productCard .card {
@@ -428,7 +448,7 @@
     }
 
     .productCard .estilo-c:hover {
-        box-shadow: 0 0 8px black;
+        box-shadow: 0 0 8px aquamarine;
     }
 }
 
@@ -534,6 +554,10 @@
         display: flex;
         height: 100%;
         width: 100%;
+    }
+
+    .productCard .estilo-c .info-container {
+        top: 55%;
     }
 
     @media (min-width: 1300px){
