--- a/site_ViveBio/src/views/products/card.ejs
+++ b/site_ViveBio/src/views/products/card.ejs
@@ -16,15 +16,17 @@
             <div class="box-texto-iconos">
               <h1> <%= product.name %>  </h1>
               <span>-<%= product.property.name%>-</span>
-              <p>Precio pago en efectivo: $
+              <ul class="info-card">
+              <li>Precio pago en efectivo: $
                     <% if (product.discount) { %>
                       <%= toThousand(product.price - (product.price * product.discount / 100)) %>
                         <% }else{ %>
                           <%= toThousand(product.price) %>
-                    <% } %> .
-                    <p> Promoción: <%= product.discount %> % off (* Hasta agotar stock).</p> 
-                    <p> Peso: <%= product.volume %> grs. </p>
-              </p>
+                    <% } %>.-
+              </li>
+                    <li class="promocion"> Promoción: <%= product.discount %>% off (*hasta agotar stock).</li> 
+                    <li> Peso: <%= product.volume %> grs. </li>
+            </ul>
                 <div class="producto-iconos">
                     <% if (locals.userLogin) { %>
                       <% if (userLogin.rol==="admin" ) { %>
@@ -55,36 +57,37 @@
                     <span class="promo">
                       <%= discount %>% off
                     </span>
-                  </div>
-                  <div class="info-container">
-                    <div class="Card-info-texto">
-                      <a href="/products/card/<%= id %> ">
-                        <h2><%= name %></h2>
-                      </a>
-                      <span> <%= property.name %> </span>
-                      <p>$
-                        <% if (discount) { %>
-                          <%= toThousand(price - (price * discount / 100)) %>
-                            <% }else{ %>
-                              <%= toThousand(price) %>
-                          <% } %>
-                      </p>
-                    </div>
-                    <div class="card-c-iconos">
-                      <div class="producto-iconos">
-                        <% if (locals.userLogin) { %>
-                          <% if (userLogin.category==="admin" ) { %>
-                            <a href="/products/edit/<%= id %> " title="Editar producto"><i
-                                class="fa-solid fa-pen"></i></a>
+                    <div class="info-container">
+                      <div class="Card-info-texto">
+                        <a href="/products/card/<%= id %> ">
+                          <h2><%= name %></h2>
+                        </a>
+                        <span> <%= property.name %> </span>
+                        <p>$
+                          <% if (discount) { %>
+                            <%= toThousand(price - (price * discount / 100)) %>
+                              <% }else{ %>
+                                <%= toThousand(price) %>
                             <% } %>
+                        </p>
+                      </div>
+                      <div class="card-c-iconos">
+                        <div class="producto-iconos">
+                          <% if (locals.userLogin) { %>
+                            <% if (userLogin.category==="admin" ) { %>
+                              <a href="/products/edit/<%= id %> " title="Editar producto"><i
+                                  class="fa-solid fa-pen"></i></a>
                               <% } %>
-                                <a href="#"><i class="fa-solid fa-share-nodes" title="Compartir"></i></a>
-                                <a href="#"><i class="fa-regular fa-heart" title="Favoritos"></i></a>
-                                <a href="/products/cart/" title="Agregar producto al carrito"><i
-                                  class="fa-solid fa-cart-shopping"></i></a>  
+                                <% } %>
+                                  <a href="#"><i class="fa-solid fa-share-nodes" title="Compartir"></i></a>
+                                  <a href="#"><i class="fa-regular fa-heart" title="Favoritos"></i></a>
+                                  <a href="/products/cart/" title="Agregar producto al carrito"><i
+                                    class="fa-solid fa-cart-shopping"></i></a>  
+                        </div>
                       </div>
                     </div>
                   </div>
+
                 </div>
               </article>
               <% }) %>
