--- a/site_ViveBio/public/css/all.css
+++ b/site_ViveBio/public/css/all.css
@@ -1,3 +1,4 @@
+
 .productAll main {
     margin: auto;
 }
@@ -21,8 +22,68 @@
     align-items: center;
     font-size: 32px;
     border-radius: 20px;
-
+    margin-bottom: 20px;
 }
+
+
+.container {
+	display: flex;
+	justify-content: center;
+	height: 100vh;
+	align-items: center;
+	position: relative;
+    object-fit: cover;
+    flex-direction: column;
+    height: 300px;
+    margin: 50px 0px;
+}
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 300px;
+	background-size: cover;
+	-webkit-filter: blur(25px);
+	z-index: -1;
+    overflow:hidden;
+}
+
+.overlay #capilar{
+	background-image: 
+}
+
+.overlay #corporal img{
+	height: 300px;
+}
+.box {
+	width: 800px;
+	display: flex;
+	height: 200px;
+	transform:translatex(60px)
+}
+.content {
+	width: calc(50% - 90px);
+	background-color: white;
+	line-height: 1.4;
+	padding: 10px;
+}
+.content h3 {
+	margin-bottom: 5px;
+}
+.image {
+	width: 50%;
+	border-bottom: 200px solid transparent;
+	border-left: 60px solid white;
+}
+.image img {
+	width: 100%;
+	height: 200px;
+	position: relative;
+	z-index: -1;
+	transform: translateX(-60px);
+}
+
 
 /* PRODUCTOS RELACIONADOS */
 .productAll .row {
@@ -58,6 +119,7 @@
     justify-content: center;
     border-radius: 8px;
     border: solid 1px white;
+    flex-wrap: nowrap;
 }
 
 .productAll .producto-iconos a:hover {
@@ -86,7 +148,7 @@
 
 .productAll .estilo-c .img-container {
     overflow: hidden;
-    height: 250px;
+    height: 200px;
     position: relative;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -107,14 +169,10 @@
 .productAll .estilo-c .info-container {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    background-color: var(--green-background-cards);
-    /* height: 170px; */
+    background-image: linear-gradient(to bottom, #d5ecd4, #c9ebca, #bdeac1, #afe8b8, #a1e7af, #98e1ab, #8fdca6, #86d6a2, #83caa0, #81bf9d, #80b399, #7fa794);
     padding: 10px;
     text-align: center;
-    /* display: flex; */
-    /* flex-wrap: nowrap; */
-    /* justify-content: space-evenly; */
-    color: var(--azulSuave);
+    color: var(--VioletaOscuro);
 }
 
 .productAll .card {
@@ -137,9 +195,10 @@
 .productAll .estilo-c .info-container p {
     font-size: 24px;
     margin: 5px 0px;
-    background-color: var(--aquamarineSuave);
+    background-color: #B4DCB18F;
     padding: 2px;
     color: var(--azulSuave);
+    border-radius: 50%;
 }
 
 /*CATEGORÍA PRODUCTO*/
@@ -204,7 +263,7 @@
     }
 
     .productAll .estilo-c:hover {
-        box-shadow: 0 0 8px black;
+        box-shadow: 0 0 8px aquamarine;
     }
 }
 
