--- a/site_ViveBio/src/views/products/all.ejs
+++ b/site_ViveBio/src/views/products/all.ejs
@@ -6,9 +6,25 @@
     <body class="productAll">
         <%- include('../partials/header') %>
             <main>
-                <section class="main">
-                    <section class="primer_contenedor">
-                    <h2 class="titulares" id="BioCapilar">BioCapilar</h2>
+                   <section class="primer_contenedor">
+                     <div class="container">
+                      <h2 class="titulares" id="BioCapilar">BioCapilar</h2>
+                      <div class="overlay" id="capilar">
+                    <img style="width:100%" src="/images/products/banner-capilar.jpg" alt="">    
+                      </div>
+                      <div class="box">
+                       <div class="content">
+                        <h3>My Story</h3>
+                        <p>
+                         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
+                        </p>
+                       </div>
+                       <div class="image">
+                        <img src="/images/products/banner-capilar.jpg" alt="">
+                      </div>
+                      </div>
+                     </div>
+
                     <section class="row">
                         <% bioCapilar.forEach(({id,productImages,name,discount,property,price})=> { %>
                           <article>
@@ -23,7 +39,6 @@
                                 <div class="Card-info-texto">
                                   <a href="/products/card/<%= id %> ">
                                     <h2><%= name %></h2>
-                                  </a>
                                   <span> <%= property.name %> </span>
                                   <p>$
                                     <% if (discount) { %>
@@ -32,6 +47,7 @@
                                           <%= toThousand(price) %>
                                       <% } %>
                                   </p>
+                                 </a>
                                 </div>
                                 <div class="card-c-iconos">
                                   <div class="producto-iconos">
@@ -51,8 +67,29 @@
                           </article>
                           <% }) %>
                         </section>
-                    <h2 class="titulares" id="BioCorporal">BioCorporal</h2>
+            
+   
+                    <div class="container">
+                      <h2 class="titulares" id="BioCorporal">BioCorporal</h2>
+                      <div class="overlay" id="corporal">
+                        <img style="width:100%" src="/images/products/banner-corporal.jpg" alt="">  
+                      </div>
+                      <div class="box">
+                       <div class="content">
+                        <h3>My Story</h3>
+                        <p>
+                         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
+                        </p>
+                       </div>
+                       <div class="image">
+                        <img src="/images/products/banner-corporal.jpg" alt="">
+                      </div>
+                      </div>
+                     </div>
+
+                    
                     <section class="row">
+
                         <% bioCorporal.forEach(({id,productImages,name,discount,property,price})=> { %>
                           <article>
                             <div class="card estilo-c">
@@ -94,7 +131,26 @@
                           </article>
                           <% }) %>
                         </section>
-                    <h2 class="titulares" id="BioSpa">BioSpa</h2>
+                 
+
+                    <div class="container">
+                      <h2 class="titulares" id="BioSpa">BioSpa</h2>
+                      <div class="overlay" id="spa">
+                        <img style="width:100%" src="/images/products/banner-spa.jpg" alt="">  
+                      </div>
+                      <div class="box">
+                       <div class="content">
+                        <h3>My Story</h3>
+                        <p>
+                         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
+                        </p>
+                       </div>
+                       <div class="image">
+                        <img src="/images/products/banner-spa.jpg" alt="">
+                      </div>
+                      </div>
+                     </div>
+
                     <section class="row">
                         <% bioSpa.forEach(({id,productImages,name,discount,property,price})=> { %>
                           <article>
