--- a/site_ViveBio/src/views/products/edit.ejs
+++ b/site_ViveBio/src/views/products/edit.ejs
@@ -8,7 +8,7 @@
                 <main>
                     <section class="add_container">
                         <h3>Editar Producto</h3>
-                        <form action="/products/update/<%= product.id %>?_method=PUT" method="POST"
+                        <form class="productEdit" action="/products/update/<%= product.id %>?_method=PUT" method="POST"
                             enctype="multipart/form-data">
                             <article class="camps_container">
                                 <div class="sub_container">
@@ -16,6 +16,7 @@
                                         <label for="name">Nombre</label>
                                         <input value="<%= product.name %>" class="add_input" type="text" id="name"
                                             name="name" style="padding:5px;">
+                                        <p id="add_error-blur" class="errorName"></p>
                                     </div>
 
                                     <div class="add_form-box">
@@ -27,26 +28,31 @@
                                                 </option>
                                                 <% }) %>
                                         </select>
+                                        <p id="add_error-blur" class="errorCategory"></p>
                                     </div>
                                     <div class="add_form-box">
                                         <label for="volume">Peso (g)</label>
                                         <input value="<%= product.volume %>" class="add_input" type="number" id="volume"
                                             name="volume" style="padding:5px;">
+                                        <p id="add_error-blur" class="errorVolume"></p>
                                     </div>
                                     <div class="add_form-box">
                                         <label for="price">Precio</label>
                                         <input value="<%= product.price %>" class="add_input" type="number" id="price"
                                             name="price" style="padding:5px;">
+                                        <p id="add_error-blur" class="errorPrice"></p>
                                     </div>
                                     <div class="add_form-box">
                                         <label for="discount">Descuento</label>
                                         <input value="<%= product.discount %>" class="add_input" type="number"
                                             id="discount" name="discount" style="padding:5px;">
+                                        <p id="add_error-blur" class="errorDiscount"></p>
                                     </div>
                                     <div class="add_form-box">
                                         <label for="discount">Stock</label>
-                                        <input value="<%= product.stock %>" class="add_input" type="number"
-                                            id="stock" name="stock" style="padding:5px;">
+                                        <input value="<%= product.stock %>" class="add_input" type="number" id="stock"
+                                            name="stock" style="padding:5px;">
+                                        <p id="add_error-blur" class="errorStock"></p>
                                     </div>
                                     <div class="add_form-box">
                                         <label for="image">Imagen</label>
@@ -59,6 +65,7 @@
                                         <label for="ingredients">Ingredientes</label>
                                         <input value="<%= product.ingredients %>" class="add_input" type="text"
                                             id="ingredients" name="ingredients" style="padding:5px;">
+                                        <p id="add_error-blur" class="errorIngredients"></p>
                                     </div>
                                     <div class="add_form-box">
                                         <label for="property">Propiedades</label>
@@ -69,12 +76,14 @@
                                                 </option>
                                                 <% }) %>
                                         </select>
+                                        <p id="add_error-blur" class="errorBlur"></p>
                                     </div>
                                     <div class="add_form-box-description">
                                         <label for="description">Descripción</label>
                                         <textarea class="add_input" type="text" id="description" name="description"
                                             rows="3" cols="35"
                                             style="resize: none; padding:5px;"><%= product.description.trim() %></textarea>
+                                            <p id="add_error-blur" class="errorDescription"></p>
                                     </div>
                                 </div>
                             </article>
@@ -92,6 +101,7 @@
                 </main>
             </main>
             <%- include('../partials/footer') %>
+                <script src="/javascript/productEdit.js"></script>
     </body>
 
 </html>
