add change pass

--- a/site_ViveBio/public/css/editProfile.css
+++ b/site_ViveBio/public/css/editProfile.css
@@ -1,8 +1,85 @@
+
+/* start popup change-pass*/
+.popup {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+    display: none;
+}
+
+.popup-container {
+    width: 300px;
+    height: 280px;
+    background: rgba(255, 255, 255, 0.795);
+    border-radius: 10px;
+}
+
+.popup-container i{
+    display: flex;
+    justify-content: flex-end;
+    margin: 5px;
+    color: var(--verdeOscuro);
+    font-size: 1.2rem;
+}
+
+.popup-dats{
+    width: 300px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 10px;
+}
+
+.popup-dats input{
+    width: 80%;
+    height: 30px;
+    padding: 10px 5px;
+    border-radius: 5px;
+    border: 1px solid var(--verdeOscuro);
+}
+
+.popup-box{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    position: relative;
+}
+
+.popup-box i{
+    position: absolute;
+    left: 78%;
+    top: 45%;
+}
+
+.show-popup{
+    display:flex;
+}
+
+/* end popup change-pass*/
 .edit_user__img input {
     display: none;
 }
 
-.edit_user__dats h2{
+.change-pass {
+    background-color: var(--verdeOscuro);
+    padding: 5px;
+    border-radius: 10px;
+    border: 1px solid black;
+    color: white;
+}
+
+.edit_user__dats h2 {
     width: 100%;
     text-align: center;
 }
@@ -15,6 +92,7 @@
     font-size: 25px;
     cursor: pointer;
 }
+
 .edit_user__img label i {
     text-shadow: 0 0 5px white;
 }
@@ -22,14 +100,15 @@
 .edit_user__container {
     width: 300px;
     padding: 20px;
-    margin: 85px auto 85px auto;
     box-shadow: 5px 5px 10px rgb(161, 206, 152);
     border-radius: 5px;
     background-color: rgba(255, 255, 255, .15);
     backdrop-filter: blur(5px);
     border: 1px solid var(--verdeFuerte);
-    display:flex;
+    display: flex;
     flex-direction: column;
+    margin: 85px auto 85px auto;
+
 }
 
 .edit_user__perfil {
@@ -59,7 +138,7 @@
     flex-direction: column;
 }
 
-.edit_user__info{
+.edit_user__info {
     width: 100%;
 }
 
@@ -77,12 +156,12 @@
     margin: 15px 0 15px;
 }
 
-.edit_user__info{
+.edit_user__info {
     display: flex;
     flex-direction: column;
 }
 
-.edit_user__info-container{
+.edit_user__info-container {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -120,7 +199,7 @@
     font-size: 14px;
     text-shadow: 0 0 2px black;
     border: none;
-    cursor:pointer;
+    cursor: pointer;
     color: white;
 }
 
@@ -129,14 +208,16 @@
     text-shadow: none;
     color: black;
 }
-.edit_user__head{
+
+.edit_user__head {
     display: flex;
     flex-direction: row;
     align-items: center;
     width: 100%;
     justify-content: space-between;
 }
-.edit_user__dats{
+
+.edit_user__dats {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -172,19 +253,21 @@
         justify-content: center;
         height: 20%;
     }
-    .edit_user__info-pass{
+
+    .edit_user__info-pass {
         position: relative;
         width: 96%;
         margin: 15px 15px;
     }
-    .edit_user__head{
+
+    .edit_user__head {
         justify-content: space-around;
     }
 }
 
 @media(min-width: 645px) {
 
-    .edit_user__info-container input{
+    .edit_user__info-container input {
         width: 260px;
         text-align: start;
     }
@@ -217,35 +300,35 @@
         align-items: flex-start;
     }
 
-    .edit_user__img{
+    .edit_user__img {
         align-items: center;
         margin: 20px 0;
         max-width: 150px;
         max-height: 150px;
     }
 
-    .edit_user__info-container{
+    .edit_user__info-container {
         display: flex;
         flex-direction: row;
     }
 
-    .edit_user__container{
+    .edit_user__container {
         display: flex;
         flex-direction: row;
-        width:80%;
+        width: 80%;
         max-width: 800px;
         padding: 0;
         margin: 50px auto;
     }
 
-    .edit_user__head{
+    .edit_user__head {
         flex-direction: column;
         justify-content: flex-start;
         width: 25%;
         border-right: 1px solid var(--verdeFuerte);
     }
 
-    .edit_user__info-container label{
+    .edit_user__info-container label {
         width: 25%;
         text-align: start;
     }
