--- a/site_ViveBio/src/views/users/editProfile.ejs
+++ b/site_ViveBio/src/views/users/editProfile.ejs
@@ -6,8 +6,37 @@
     <body class="editProfile">
         <%- include('../partials/header') %>
             <main>
+                <div class="popup" id="popup">
+
+                    <form action="" class="popup-container" id="form-popup">
+                        <i class="fas fa-times" id="btn-close-popup"></i>
+                        <div class="popup-dats">
+                            <div class="popup-box">
+                                <label for="">Antigua contraseña</label>
+                                <input type="password" id="OldPassword" name="OldPassword">
+                                <i class="fas fa-eye" id="eye1"></i>
+                            </div>
+                            <span id="errorOldPassword"></span>
+                            <div class="popup-box">
+                                <label for="">Nueva contraseña</label>
+                                <input type="password" id="Newpassword" name="Newpassword">
+                                <i class="fas fa-eye" id="eye2"></i>
+                            </div>
+                            <span id="errorNewpassword"></span>
+                            <div class="popup-box">
+                                <label for="">Repetir nueva contraseña</label>
+                                <input type="password" id="Newpassword2" name="Newpassword2">
+                                <i class="fas fa-eye" id="eye3"></i>
+                            </div>
+                            <span id="errorNewpassword2"></span>
+                            <div class="popup-box">
+                                <button type="submit" class="change-pass">Guardar Cambios</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
                 <form action="/users/profile/edit/update/<%= user.id %>?_method=PUT" method="POST"
-                    enctype="multipart/form-data">
+                    enctype="multipart/form-data" id="edit-form">
                     <section class="edit_user__container">
                         <div class="edit_user__head">
                             <div class="edit_user__img">
@@ -28,7 +57,7 @@
                                         value="<%= locals.errores && errores.firstname ? old.firstname : user.firstname %>"
                                         name="firstname" id="firstname">
                                 </div>
-                                <span class="register_alert" style="width: auto;margin: auto;">
+                                <span class="register_alert" style="width: auto;margin: auto;" id="errorFirstname">
                                     <%= locals.errores && errores.firstname ? errores.firstname.msg : null %>
                                 </span>
                             </div>
@@ -59,18 +88,25 @@
                                 <input type="text" value="<%= user.email %>" disabled name="email" id="email">
                             </div>
                             <div class="edit_user__options">
-                                
+
                             </div>
                             <div class="edit_user__info-container">
                                 <label for="">Rol:</label>
-                                <span><%= user.rol.name %></span>
+                                <span>
+                                    <%= user.rol.name %>
+                                </span>
+                            </div>
+                            <div class="edit_user__info-container">
+                                <span class="change-pass" id="btn-change-pass">Cambiar contraseña</span>
                             </div>
                         </div>
                     </section>
                 </form>
+
+
             </main>
             <%- include('../partials/footer') %>
-            <script src="/javascript/editProfile.js"></script>
+                <script src="/javascript/editProfile.js"></script>
     </body>
-    
+
 </html>
