--- a/site_ViveBio/public/css/editProfile.css
+++ b/site_ViveBio/public/css/editProfile.css
@@ -1,5 +1,8 @@
 
 /* start popup change-pass*/
+.input-pop.active-error{
+    border: 2px solid rgb(235, 78, 78);
+}
 .popup {
     width: 100%;
     height: 100%;
@@ -15,30 +18,37 @@
 
 .popup-container {
     width: 300px;
-    height: 280px;
+    height: 320px;
     background: rgba(255, 255, 255, 0.795);
     border-radius: 10px;
 }
 
 .popup-container i{
     display: flex;
+    width: auto;
     justify-content: flex-end;
     margin: 5px;
     color: var(--verdeOscuro);
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    padding-right: 10px;
+}
+.contain-pop-top{
+    display: flex;
+    justify-content: flex-end;
 }
 
 .popup-dats{
     width: 300px;
-    height: 250px;
+    height: 300px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     padding-bottom: 10px;
+    
 }
 
-.popup-dats input{
+.input-pop{
     width: 80%;
     height: 30px;
     padding: 10px 5px;
