--- a/site_ViveBio/src/views/products/all.ejs
+++ b/site_ViveBio/src/views/products/all.ejs
@@ -14,9 +14,8 @@
                       </div>
                       <div class="box">
                        <div class="content">
-                        <h3>My Story</h3>
                         <p>
-                         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
+                         La naturaleza nos regala su frescura, fuerza, y vitalidad. Nuestro pelo se expresa, y refleja nuestro amor propio. BioCapilar es libertad, belleza, y salud para nuestro cabello.
                         </p>
                        </div>
                        <div class="image">
@@ -38,7 +37,7 @@
                               <div class="info-container">
                                 <div class="Card-info-texto">
                                   <a href="/products/card/<%= id %> ">
-                                    <h2><%= name %></h2>
+                                    <h2 class="name"><%= name %></h2>
                                   <span> <%= property.name %> </span>
                                   <p>$
                                     <% if (discount) { %>
@@ -102,7 +101,7 @@
                               <div class="info-container">
                                 <div class="Card-info-texto">
                                   <a href="/products/card/<%= id %> ">
-                                    <h2><%= name %></h2>
+                                    <h2 class="name"><%= name %></h2>
                                   </a>
                                   <span> <%= property.name %> </span>
                                   <p>$
@@ -164,7 +163,7 @@
                               <div class="info-container">
                                 <div class="Card-info-texto">
                                   <a href="/products/card/<%= id %> ">
-                                    <h2><%= name %></h2>
+                                    <h2 class="name"><%= name %></h2>
                                   </a>
                                   <span> <%= property.name %> </span>
                                   <p>$
