--- a/site_ViveBio/public/css/all.css
+++ b/site_ViveBio/public/css/all.css
@@ -23,6 +23,7 @@
     font-size: 32px;
     border-radius: 20px;
     margin-bottom: 20px;
+    padding: 10px;
 }
 
 
@@ -34,7 +35,7 @@
 	position: relative;
     object-fit: cover;
     flex-direction: column;
-    height: 300px;
+    height: 400px;
     margin: 50px 0px;
 }
 .overlay {
@@ -42,22 +43,15 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 300px;
+	height: 400px;
 	background-size: cover;
 	-webkit-filter: blur(25px);
 	z-index: -1;
     overflow:hidden;
 }
 
-.overlay #capilar{
-	background-image: 
-}
-
-.overlay #corporal img{
-	height: 300px;
-}
 .box {
-	width: 800px;
+	width: 90%;
 	display: flex;
 	height: 200px;
 	transform:translatex(60px)
@@ -67,6 +61,8 @@
 	background-color: white;
 	line-height: 1.4;
 	padding: 10px;
+    border-top-left-radius: 5%;
+    border-bottom-left-radius: 5%;
 }
 .content h3 {
 	margin-bottom: 5px;
@@ -82,6 +78,8 @@
 	position: relative;
 	z-index: -1;
 	transform: translateX(-60px);
+    border-top-right-radius: 5%;
+    border-bottom-right-radius: 5%;
 }
 
 
@@ -157,13 +155,13 @@
 .productAll .estilo-c .img-container img {
     width: 100%;
     position: absolute;
-    transition: all 0.5s;
+    transition: all 0.9s;
     height: 100%;
     object-fit: cover;
 }
 
 .productAll .estilo-c:hover .img-container img {
-    transform: scale(1.2);
+    transform: scale(1.09);
 }
 
 .productAll .estilo-c .info-container {
@@ -189,6 +187,11 @@
     font-size: 16px;
     text-shadow: none;
     color: var(--azulSuave);
+}
+
+.productAll .estilo-c .info-container .name:hover {
+   background-color:rgba(255, 255, 255, 0.562);
+   border-radius: 40%;
 }
 
 /*PRECIO PRODUCTO */
@@ -262,8 +265,13 @@
         font-size: 15px;
     }
 
+    .productAll .estilo-c {
+        transition: transform .3s ease;
+    }
+
     .productAll .estilo-c:hover {
         box-shadow: 0 0 8px aquamarine;
+        transform: translateY(-10px);
     }
 }
 
