--- a/site_ViveBio/src/views/users/editProfile.ejs
+++ b/site_ViveBio/src/views/users/editProfile.ejs
@@ -8,7 +8,7 @@
             <main>
                 <div class="popup" id="popup">
 
-                    <form action="" class="popup-container" id="form-popup">
+                    <form action="/users/updatepass/<%= user.id %>?_method=PUT" method="POST" class="popup-container" id="form-popup">
                         <div class="contain-pop-top">
                             <i class="fas fa-times" id="btn-close-popup"></i>
                         </div>
@@ -48,7 +48,7 @@
                                 <input type="file" accept="image/*" id="image" name="image">
                             </div>
                             <div class="edit_user__options">
-                                <button type="submit">Guardar Cambios</button>
+                                <button type="submit" id="btn-save-edit">Guardar Cambios</button>
                             </div>
                         </div>
                         <div class="edit_user__dats">
@@ -58,7 +58,7 @@
                                     <label for="">Nombre:</label>
                                     <input type="text"
                                         value="<%= locals.errores && errores.firstname ? old.firstname : user.firstname %>"
-                                        name="firstname" id="firstname">
+                                        name="firstname" id="firstname" class="Edit-input">
                                 </div>
                                 <span class="register_alert" style="width: auto;margin: auto;" id="errorFirstname">
                                     <%= locals.errores && errores.firstname ? errores.firstname.msg : null %>
@@ -69,9 +69,9 @@
                                     <label for="">Apellido:</label>
                                     <input type="text"
                                         value="<%= locals.errores && errores.lastname ? old.lastname : user.lastname %>"
-                                        name="lastname" id="lastname">
+                                        name="lastname" id="lastname" class="Edit-input">
                                 </div>
-                                <span class="register_alert" style="width: auto;margin: auto;">
+                                <span class="register_alert" style="width: auto;margin: auto;" id="errorLastname">
                                     <%= locals.errores && errores.lastname ? errores.lastname.msg : null %>
                                 </span>
                             </div>
@@ -80,15 +80,15 @@
                                     <label for="">Usuario:</label>
                                     <input type="text"
                                         value="<%= locals.errores && errores.username ? old.username : user.username %>"
-                                        name="username" id="username">
+                                        name="username" id="username" class="Edit-input">
                                 </div>
-                                <span class="register_alert" style="width: auto;margin: auto;">
+                                <span class="register_alert" style="width: auto;margin: auto;" id="errorUsername">
                                     <%= locals.errores && errores.username ? errores.username.msg : null %>
                                 </span>
                             </div>
                             <div class="edit_user__info-container">
                                 <label for="">Email:</label>
-                                <input type="text" value="<%= user.email %>" disabled name="email" id="email">
+                                <input type="text" value="<%= user.email %>" disabled name="email" id="email" class="Edit-input">
                             </div>
                             <div class="edit_user__options">
 
@@ -98,6 +98,9 @@
                                 <span>
                                     <%= user.rol.name %>
                                 </span>
+                            </div>
+                            <div class="errorDats">
+                                <span class="register_alert" id="errorSubmitDats"></span>
                             </div>
                             <div class="edit_user__info-container">
                                 <span class="change-pass" id="btn-change-pass">Cambiar contraseña</span>
