--- a/site_ViveBio/src/views/users/login.ejs
+++ b/site_ViveBio/src/views/users/login.ejs
@@ -42,14 +42,13 @@
                                 <button type="submit"><i class="fab fa-facebook"></i></button>
                             </div>
                         </div>
-                        <form method="POST">
+                        <form method="POST" id="form-login">
                             <article>
                                 <div class="login_form-box">
                                     <label for="username">Usuario</label>
                                     <input class="login_form-input" type="text" id="username" name="username"
-                                        placeholder="Ingresa usuario"
-                                        value="">
-                                    <span class="register_alert">
+                                        placeholder="Ingresa usuario" value="">
+                                    <span class="register_alert" id="errorUsername">
                                         <%= locals.errors && errors.username ? errors.username.msg : null%>
                                     </span>
                                 </div>
@@ -57,9 +56,10 @@
                                     <label for="password">Contraseña</label>
                                     <input class="login_form-input" type="password" id="password" name="password"
                                         placeholder="Ingresa tu contraseña">
-                                    <span class="register_alert">
+                                    <span class="register_alert" id="errorPassword">
                                         <%= locals.errors && errors.password ? errors.password.msg : null%>
                                     </span>
+                                    <span class="register_alert" id="errorLogin"></span>
                                 </div>
                             </article>
                             <div class="login_center">
@@ -72,8 +72,8 @@
                                 </div>
                             </div>
                         </form>
-
                     </section>
         </main>
+        <script src="/javascript/login.js"></script>
     </body>
 </html>
