--- a/site_ViveBio/public/css/variables.css
+++ b/site_ViveBio/public/css/variables.css
@@ -13,7 +13,7 @@
     --azulMarino: #383843;
     --azul: #43446C;
     --azulSuave: #3F3F82;
-    --lila: #AA80A6;
+    --lila: #8E5689;
     --rosa: #E27FC4;
     --aquamarine: #B9F3CE;
     --verdeFuerte: #3DBF26;
