--- a/site_ViveBio/public/css/all.css
+++ b/site_ViveBio/public/css/all.css
@@ -26,8 +26,25 @@
     padding: 10px;
 }
 
+.productAll .content p{
+    text-align: center;
+    text-justify: distribute;
+    padding-top: 10px;
+}
 
-.container {
+.productAll #capilar{
+    color:  #306C25;
+}
+
+.productAll #corporal{
+    color: var(--azulSuave);
+}
+
+.productAll #spa{
+    color: var(--lila)
+}
+
+.productAll .container {
 	display: flex;
 	justify-content: center;
 	height: 100vh;
@@ -38,7 +55,8 @@
     height: 400px;
     margin: 50px 0px;
 }
-.overlay {
+
+.productAll .overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -50,13 +68,13 @@
     overflow:hidden;
 }
 
-.box {
+.productAll .box {
 	width: 90%;
 	display: flex;
 	height: 200px;
 	transform:translatex(60px)
 }
-.content {
+.productAll .content {
 	width: calc(50% - 90px);
 	background-color: white;
 	line-height: 1.4;
@@ -64,15 +82,15 @@
     border-top-left-radius: 5%;
     border-bottom-left-radius: 5%;
 }
-.content h3 {
+.productAll .content h3 {
 	margin-bottom: 5px;
 }
-.image {
+.productAll .image {
 	width: 50%;
 	border-bottom: 200px solid transparent;
 	border-left: 60px solid white;
 }
-.image img {
+.productAll .image img {
 	width: 100%;
 	height: 200px;
 	position: relative;
