sprint 7 users finished

--- a/site_ViveBio/public/css/register.css
+++ b/site_ViveBio/public/css/register.css
@@ -5,6 +5,11 @@
     background-attachment: fixed;
 }
 
+.box_error_submit_login{
+    width: 100%;
+    text-align: center;
+}
+
 .header_register {
     display: none;
 }
